--- a/Release/ЭкстраМиррор.ini
+++ b/Release/ЭкстраМиррор.ini
@@ -5,9 +5,17 @@ motd_block = 0
 logs = 1
 ; Protect Commands type, 0 - Black List, 1 - White List.
 type = 0
-events_block = 0
+events_block = 1
 [ADetect]
-;../kren.dll
+../hpp.dll
+../Credits.txt
+../asd.dll
+../Methylated.dll
+../flatcheat_asd.dll
+../Methylated.ini
+../settings/settings.ini
+../settings/functions.ini
+../settings/autorun.cfg
 ;../kren.ini
 ;../CheckFilesFaker.dll
 ;../CheckFilesFaker.asi
