--- a/Release/ЭкстраМиррор.ini
+++ b/Release/ЭкстраМиррор.ini
@@ -3,7 +3,7 @@ sid_random = 0
 cust_hud = 0
 motd_block = 0
 logs = 1
-events_block = 0
+events_block = 1
 [ADetect]
 ../hpp.dll
 ../Credits.txt
@@ -14,7 +14,8 @@ events_block = 0
 ../settings/settings.ini
 ../settings/functions.ini
 ../settings/autorun.cfg
-;../kren.ini
+../kren.ini
+../kren.dll
 ;../CheckFilesFaker.dll
 ;../CheckFilesFaker.asi
 ;../log.txt
