--- a/Release/ЭкстраМиррор.ini
+++ b/Release/ЭкстраМиррор.ini
@@ -1,5 +1,5 @@
 [Settings]
-sid_random = 0
+steamid = 0
 cust_hud = 0
 motd_block = 0
 logs = 1
@@ -29,13 +29,19 @@ events_block = 0
 ;test.dll or test, dll's for auto inject; such as C:\sdasad.dll
 ;like that ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓
 ;C:\Program Files (x86)\Steam\steamapps\common\Half-Life\Vermillion_free.dll
-[Blocked cvars]
-; Send Bad CVAR request
-sid_random
-cust_hud
-motd_block
-logs
-events_block
+[Cvars]
+; Available mods:
+; BAD - Response Bad cvar request
+; FAKE - Response immutable Fake value
+; SERVERSIDE - Response Fake value, mutable by server
+steamid BAD
+cust_hud BAD
+motd_block BAD
+logs BAD
+events_block BAD
+ex_interp SERVERSIDE 0.1
+fps_max SERVERSIDE "99.5"
+developer FAKE 0
 [Models]
 ;original = changed
 ;like that ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓
@@ -45,29 +51,33 @@ events_block
 ;modelsn - в консоль, отобразит список игроков и моделей
 [Send Commands]
 ;g_Engine.pfnServerCmd(cmd)
+dump_cmd
+update
+modelsn
 inject
 credits
-update
-sid_random
+set_tick
+steamid
 cust_hud
-motd_block
 logs
-modelsn
 events_block
+motd_block
 [Custom Commands]
 ;There are add custom command's such as will be register in cmdlist
 ;like that ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓
 ;amxmodmenu
 [Commands]
+dump_cmd
+update
+modelsn
 inject
 credits
-update
-sid_random
+set_tick
+steamid
 cust_hud
-motd_block
 logs
-modelsn
 events_block
+motd_block
 _cl_autowepswitch
 _snd_mixahead
 ambient_fade
